--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <br>
         <br>
         <div class="selection">
+        <b><label for="updates">Choose a  Header: </label></b>
+     <select name="updates" class="bx1" id="choose">
+        <option value="📷|">Picture Update</option>
+        <option value="📺|">Video Update</option>
+        <option value="📢|">Announcement Update</option>
+        <option value="🗳|">Voting Update Update</option>
+        <option value="🎉|">Event Update</option>
+        
+        </select>
+        <br>
+        <br>
+
+         
+        <div class="selection">
             <b><label for="updates">Choose a 2nd Header : </label></b>
          <select name="updates" class="bx1" id="choose2">
             <option value="QWER UPDATE">QWER Update</option>
