--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         <div class="selection">
-        <b><label for="updates">Choose a  Header: </label></b>
+        <b><label for="updates">Choose a Sub Header: </label></b>
      <select name="updates" class="bx1" id="choose1">
         <option value="Instagram Update">Instagram</option>
         <option value="Youtube Update">Youtube</option>
