--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function greet(){
             }
             
             document.getElementById("header").innerHTML = 
-            choo + "\n\n" + choo2 + choo1 + cap + "\n\n" + ans + "\n" + "#QWER #큐더블유이알 #BAWIGE " + tek + oth
+            choo + "\n\n" + choo2 + " " + choo1 + "\n\n" + cap + "\n\n" + ans + "\n" + "#QWER #큐더블유이알 #BAWIGE " + tek + oth
             ;
             
         })
